Fixed server qr code generation issue

--- a/templates/default/checkout.css
+++ b/templates/default/checkout.css
@@ -110,3 +110,10 @@
 #order #personalData .input, #order #personalData #oComment:focus{
     outline: none;
 }
+
+
+#orderPrint img {
+  margin: auto;
+  display: block;
+  float: none;
+}
